--- a/tethysapp-lillywhitejaredmapapp/tethysapp/lillywhitejaredmapapp/templates/lillywhitejaredmapapp/about.html
+++ b/tethysapp-lillywhitejaredmapapp/tethysapp/lillywhitejaredmapapp/templates/lillywhitejaredmapapp/about.html
@@ -13,12 +13,13 @@
 <div style="float:left;"><img src="{% static 'mappapp/images/JaredAndAmy.jpg' %}" width="300px"></div>
     <div style="align:right;margin-left:20px"> Author: Jared Lillywhite<br>
       Email: <a href="mailto:jaredclillywhite@gmail.com>">jaredclillywhite@gmail.com</a><br>
-      About Me: I am a Civil Engineering student posing as a web app developer. I enjoy rooting for teams that always lose, such as the Utah Jazz, the BYU Cougars, and independent political candidates. The only winner I've ever picked in my life is my beautiful wife of 2 years. Hope you liked my app.<br>
+      <a href="#sampleModal" role="button" class="btn btn-success" data-toggle="modal">About Me!</a>
     </div>
 {% endblock %}
 
 {# Use the after_app_content block for modals #}
 {% block after_app_content %}
+  {% gizmo message_box %}
   <!-- Example Modal -->
   <div class="modal fade" id="help-modal" tabindex="-1" role="dialog" aria-labelledby="help-modal-label">
     <div class="modal-dialog" role="document">
